--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "kts",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://iamAkuma.github.io/kts",
+  "homepage": "https://iamakuma.github.io/kts",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
