--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-player": "^2.16.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-vertical-timeline-component": "^3.6.0",
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
   },
