--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.3",
+    "react-lazyload": "^3.2.1",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
